k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-devops-dp
  namespace: demo-devops
  labels:
    apps: demo-devops-app
spec:
  selector:
    matchLabels:
      apps: demo-devops-app
  template:
    metadata:
      labels:
        apps: demo-devops-app
    spec:
      containers:
        - name: demo-devops-app
          image: ahioros/demo-devops-nodejs:10659304188
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
