k8s/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-devops-dp
  namespace: demo-devops
  labels:
    apps: demo-devops-app
spec:
  selector:
    matchLabels:
      apps: demo-devops-app
  template:
    metadata:
      labels:
        apps: demo-devops-app
    spec:
      volumes:
        - name: demo-devops-storage
          persistentVolumeClaim:
            claimName: demo-devops-pvc
      containers:
        - name: demo-devops-app
          image: ahioros/demo-devops-nodejs:10668277471
          readinessProbe:
            httpGet:
              path: /api/users
              port: 8000
            initialDelaySeconds: 25
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/users
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: demo-devops-storage
              mountPath: /app/data
