k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-devops-ingress
  namespace: demo-devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/users
spec:
  ingressClassName: nginx
  rules:
  - host: devsudemo.ahioros.homelab.local
    http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: demo-devops-svc
            port:
              number: 80
